fix/translations: wip

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -1,15 +1,17 @@
 {
   "app-title": "Ludosaure",
+  "landing-page-subtitle": "Retrouvez tous vos jeux de société préférés",
   "shop-address": "2 Bis Boulevard Cahours 35150 Janzé",
   "shop-opening-hours-1": "Du Lun. Au Sam.",
   "shop-opening-hours-2": "\n9H30 - 19H",
   "create-account-label": "Créer un compte",
   "login-label": "Se connecter",
+  "login-title": "Connexion",
+  "proceed-as-guest-label": "Continuer sans compte",
   "see-more-label": "Voir plus",
   "user-must-log-for-action": "Vous devez être connecté pour effectuer cette action",
   "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
   "remove-from-favorites": "Retirer des favoris",
-  "no-favorites-found": "Aucun favoris trouvé.",
   "min-max-players-label": "{minPlayers} - {maxPlayers}",
   "nb-players-label": "@:min-max-players-label joueurs",
   "nb-players-label-long": "Nombre de joueurs",
@@ -19,5 +21,40 @@
   "min-age": "{age} ans",
   "game-duration-label": "Durée d'une partie",
   "game-duration": "{duration} min",
-  "book-game-label": "Réserver"
+  "book-game-label": "Réserver",
+  "try-again-label": "Réessayer",
+  "no-favorites-found": "Aucun favoris trouvé.",
+  "no-reservation-found": "Aucune réservation trouvées.",
+  "no-game-found": "Aucun jeu trouvé.",
+  "form": {
+    "field-required-msg": "Ce champ est requis.",
+    "invalid-email-msg": "Adresse email invalide.",
+    "password-min-length-msg": "{} caractères minimum.",
+    "password-special-char-msg": "Doit contenir au moins un caractère spécial.",
+    "password-number-msg": "Doit contenir au moins un chiffre.",
+    "password-uppercase-msg": "Doit contenir au moins une majuscule.",
+    "password-lowercase-msg": "Doit contenir au moins une minuscule.",
+    "passwords-not-matching-msg": "Les mots de passe ne correspondent pas.",
+    "phone-number-required-msg": "Veuillez entrer votre numéro de téléphone.",
+    "phone-number-invalid-msg": "Veuillez entrer un numéro de téléphone valide."
+  },
+  "name-label": "Nom",
+  "firstname-label": "Prénom",
+  "email-label": "Email",
+  "phone-label": "Téléphone",
+  "password-label": "Mot de passe",
+  "password-forgotten-label": "Mot de passe oublié ?",
+  "password-confirm-label": "Confirmer le mot de passe",
+  "register-label": "S'inscrire",
+  "register-title": "Inscription",
+  "already-have-account-msg": "Vous avez déjà un compte ?",
+  "register-agreement-msg": "En vous inscrivant, vous acceptez les ",
+  "terms-of-use": "Conditions générales d'utilisation",
+  "register-success-msg": "Votre compte a été créé avec succès.",
+  "confirm-email-msg": "Veuillez consulter vos mails pour confirmer votre adresse email.",
+  "all": {
+    "fem": "Toutes",
+    "masc": "Tous"
+  },
+  "date-period": "Du {startDate} au {endDate}"
 }
