--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -9,8 +9,6 @@
   "login-title": "Connexion",
   "proceed-as-guest-label": "Continuer sans compte",
   "see-more-label": "Voir plus",
-  "user-must-log-for-action": "Vous devez être connecté pour effectuer cette action",
-  "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
   "remove-from-favorites": "Retirer des favoris",
   "min-max-players-label": "{minPlayers} - {maxPlayers}",
   "nb-players-label": "@:min-max-players-label joueurs",
@@ -34,27 +32,59 @@
     "password-number-msg": "Doit contenir au moins un chiffre.",
     "password-uppercase-msg": "Doit contenir au moins une majuscule.",
     "password-lowercase-msg": "Doit contenir au moins une minuscule.",
+    "password-required-msg": "Veuillez saisir votre mot de passe.",
     "passwords-not-matching-msg": "Les mots de passe ne correspondent pas.",
     "phone-number-required-msg": "Veuillez entrer votre numéro de téléphone.",
-    "phone-number-invalid-msg": "Veuillez entrer un numéro de téléphone valide."
+    "phone-number-invalid-msg": "Veuillez entrer un numéro de téléphone valide.",
+    "email-required-msg": "Veuillez saisir votre email.",
+    "email-invalid-msg": "Veuillez saisir un email valide."
   },
   "name-label": "Nom",
   "firstname-label": "Prénom",
   "email-label": "Email",
+  "email-placeholder": "john.doe@gmail.com",
   "phone-label": "Téléphone",
   "password-label": "Mot de passe",
   "password-forgotten-label": "Mot de passe oublié ?",
+  "password-forgotten-title": "Mot de passe oublié",
+  "password-forgotten-subtitle": "Veuillez saisir votre adresse email pour réinitialiser votre mot de passe.",
   "password-confirm-label": "Confirmer le mot de passe",
   "register-label": "S'inscrire",
   "register-title": "Inscription",
   "already-have-account-msg": "Vous avez déjà un compte ?",
+  "no-account-yet-label": "Vous n'avez pas encore de compte ?",
   "register-agreement-msg": "En vous inscrivant, vous acceptez les ",
   "terms-of-use": "Conditions générales d'utilisation",
   "register-success-msg": "Votre compte a été créé avec succès.",
   "confirm-email-msg": "Veuillez consulter vos mails pour confirmer votre adresse email.",
+  "confirm-email-not-received-msg": "Vous n'avez pas reçu votre mail de confirmation ?",
+  "confirm-account-title": "Confirmation mon compte",
+  "confirm-account-subtitle": "Renseignez votre adresse mail pour recevoir le mail de confirmation à nouveau.",
   "all": {
     "fem": "Toutes",
     "masc": "Tous"
   },
-  "date-period": "Du {startDate} au {endDate}"
+  "date-period": "Du {startDate} au {endDate}",
+  "send-label": "Envoyer",
+  "edited-at-label": "Modifié le {date}",
+  "home-title": "Accueil",
+  "message-title": "Mes Messages",
+  "search-title": "Rechercher",
+  "account-title": "Mon Compte",
+  "favorites-title": "Mes Favoris",
+  "add-game-title": "Ajouter un jeu",
+  "reservation-title": "Réservations",
+  "administration-title": "Administration",
+  "errors": {
+    "unknown": "Erreur inconnue",
+    "service-unavailable": "Service indisponible. Veuillez réessayer ultérieurement",
+    "authentication-failed": "Erreur d'authentification, votre email ou votre mot de passe sont invalides",
+    "unverified-account": "Votre compte n'a pas encore été vérifié. Veuillez consulter vos mails pour confirmer votre adresse email.",
+    "email-already-used": "Un compte utilisant cet email existe déjà.",
+    "forbidden-access": "Vous n'avez pas accès à cette page",
+    "user-must-log-for-action": "Vous devez être connecté pour effectuer cette action",
+    "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
+    "game-not-found": "Ce jeu n'existe pas ou n'existe plus",
+    "favorite-already-exists": "Ce jeu est déjà dans vos favoris"
+  }
 }
