fix/responsive: home client

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -67,7 +67,7 @@
   "send-label": "Envoyer",
   "edited-at-label": "Modifié le {date}",
   "home-title": "Accueil",
-  "message-title": "Mes Messages",
+  "messages-title": "Mes Messages",
   "search-title": "Rechercher",
   "account-title": "Mon Compte",
   "favorites-title": "Mes Favoris",
