--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -20,6 +20,10 @@
   "game-duration-label": "Durée d'une partie",
   "game-duration": "{duration} min",
   "book-game-label": "Réserver",
+  "add-to-cart-label": "Ajouter au panier",
+  "remove-from-cart-label": "Retirer du panier",
+  "add-to-cart-success-label": "Ajouté au panier",
+  "remove-from-cart-success-label": "Retiré du panier",
   "try-again-label": "Réessayer",
   "no-favorites-found": "Aucun favoris trouvé.",
   "no-reservation-found": "Aucune réservation trouvées.",
@@ -86,5 +90,6 @@
     "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
     "game-not-found": "Ce jeu n'existe pas ou n'existe plus",
     "favorite-already-exists": "Ce jeu est déjà dans vos favoris"
-  }
+  },
+  "select-date-range-label": "Durée de la réservation (une semaine minimum)"
 }
