--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -14,7 +14,7 @@
   "nb-players-label": "@:min-max-players-label joueurs",
   "nb-players-label-long": "Nombre de joueurs",
   "weekly-amount-label": "Prix à la semaine",
-  "weekly-amount": "{amount} €",
+  "amount": "{amount} €",
   "min-age-label": "Âge minimum",
   "min-age": "{age} ans",
   "game-duration-label": "Durée d'une partie",
@@ -79,6 +79,7 @@
   "add-game-title": "Ajouter un jeu",
   "reservation-title": "Réservations",
   "administration-title": "Administration",
+  "cart-title": "Mon Panier",
   "errors": {
     "unknown": "Erreur inconnue",
     "service-unavailable": "Service indisponible. Veuillez réessayer ultérieurement",
@@ -89,7 +90,23 @@
     "user-must-log-for-action": "Vous devez être connecté pour effectuer cette action",
     "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
     "game-not-found": "Ce jeu n'existe pas ou n'existe plus",
-    "favorite-already-exists": "Ce jeu est déjà dans vos favoris"
+    "favorite-already-exists": "Ce jeu est déjà dans vos favoris",
+    "cart-loading": "Erreur lors du chargement du panier",
+    "payment-sheet-display": "Erreur lors de l'affichage du formulaire de paiement",
+    "payment-sheet-submit": "Erreur lors de la confirmation du paiement"
   },
-  "select-date-range-label": "Durée de la réservation (une semaine minimum)"
+  "select-date-range-label": "Durée de la réservation (une semaine minimum)",
+  "booking-period-label-1": "Réservation du ",
+  "booking-period-label-2": " au ",
+  "booking-duration-label": "Durée de la réservation",
+  "booking-nb-weeks-label": {
+    "one": "1 semaine *",
+    "other": "{nbWeeks} semaines *"
+  },
+  "booking-nb-weeks-information": "* Toute semaine entamée est dûe.",
+  "booking-total-amount-label": "Montant total de la réservation",
+  "cart-empty-label": "Votre panier est vide",
+  "payment-success-label": "Votre paiement a bien été pris en compte.",
+  "payment-success-subtitle": "Il ne vous reste plus qu'à venir chercher votre jeu !",
+  "payment-validate-button": "Valider la commande"
 }
