--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -13,6 +13,7 @@
   "min-max-players-label": "{minPlayers} - {maxPlayers}",
   "nb-players-label": "@:min-max-players-label joueurs",
   "nb-players-label-long": "Nombre de joueurs",
+  "nb-weeks": "Nombre de semaines : {nbWeeks}",
   "weekly-amount-label": "Prix à la semaine",
   "amount": "{amount} €",
   "min-age-label": "Âge minimum",
@@ -69,6 +70,12 @@
     "fem": "Toutes",
     "masc": "Tous"
   },
+  "download-invoice": "Télécharger la facture",
+  "total-amount": "Montant total :",
+  "reduction": "Réduction : ",
+  "returned-games": "Les jeux ont été retournés",
+  "contact-user": "Contacter l'utilisateur",
+  "details": "Détails",
   "date-period": "Du {startDate} au {endDate}",
   "send-label": "Envoyer",
   "edited-at-label": "Modifié le {date}",
@@ -81,6 +88,9 @@
   "reservation-title": "Réservations",
   "administration-title": "Administration",
   "cart-title": "Mon Panier",
+  "no-conversation": "Vous n'avez aucune conversation.",
+  "how-contact-user": "Pour contacter un utilisateur, veuillez passer par sa réservation",
+  "reservation-details-title": "Réservations #{number} - Par {firstname} {lastname}",
   "errors": {
     "unknown": "Erreur inconnue",
     "service-unavailable": "Service indisponible. Veuillez réessayer ultérieurement",
