feature:book-game - applique les réductions et valide les paiements

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -111,5 +111,6 @@
   "payment-validate-button": "Valider la commande",
   "game-unavailable-label": "Indisponible",
   "pick-booking-date-label": "Choisissez une date de réservation",
+  "applied-reduction-label": "Réduction appliquée",
   "validate-label": "Valider"
 }
