--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -70,10 +70,14 @@
     "fem": "Toutes",
     "masc": "Tous"
   },
+  "invoices": "Factures",
+  "see-invoices": "Voir les factures",
   "download-invoice": "Télécharger la facture",
+  "invoice-number": "Facture #{number}",
+  "invoice-amount": "Montant facturé :",
   "total-amount": "Montant total :",
   "reduction": "Réduction : ",
-  "returned-games": "Les jeux ont été retournés",
+  "validate-game-returned": "Valider le retour des jeux",
   "contact-user": "Contacter l'utilisateur",
   "details": "Détails",
   "date-period": "Du {startDate} au {endDate}",
