--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -106,7 +106,7 @@
     "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
     "game-not-found": "Ce jeu n'existe pas ou n'existe plus",
     "favorite-already-exists": "Ce jeu est déjà dans vos favoris",
-    "cart-loading": "Erreur lors du chargement du panier",
+    "cart-loadingcart-loading": "Erreur lors du chargement du panier",
     "payment-sheet-display": "Erreur lors de l'affichage du formulaire de paiement",
     "payment-sheet-submit": "Erreur lors de la confirmation du paiement",
     "cancel-reservation": "Erreur lors de l'annulation de la réservation"
@@ -128,5 +128,6 @@
   "game-unavailable-label": "Indisponible",
   "pick-booking-date-label": "Choisissez une date de réservation",
   "applied-reduction-label": "Réduction appliquée",
-  "validate-label": "Valider"
+  "validate-label": "Valider",
+  "email-copied": "L'email de l'utilisateur {email} a été copié dans le presse-papier."
 }
