--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -129,5 +129,6 @@
   "pick-booking-date-label": "Choisissez une date de réservation",
   "applied-reduction-label": "Réduction appliquée",
   "validate-label": "Valider",
+  "not-available-on-web-label": "Fonctionnalité non disponible sur le web"
   "email-copied": "L'email de l'utilisateur {email} a été copié dans le presse-papier."
 }
