--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -58,7 +58,7 @@
   "register-label": "S'inscrire",
   "register-title": "Inscription",
   "already-have-account-msg": "Vous avez déjà un compte ?",
-  "no-account-yet-label": "Vous n'avez pas encore de compte ?",
+  "no-account-yet-label": "Vous n'avez pas encore de compte ? ",
   "register-agreement-msg": "En vous inscrivant, vous acceptez les ",
   "terms-of-use": "Conditions générales d'utilisation",
   "register-success-msg": "Votre compte a été créé avec succès.",
@@ -82,6 +82,7 @@
   "total-amount": "Montant total :",
   "reduction": "Réduction : ",
   "validate-game-returned": "Valider le retour des jeux",
+  "games-returned-successfully": "Les jeux ont été retournés avec succès.",
   "validate-game-returned-confirm": "Etes-vous sûr de vouloir valider le retour des jeux ?",
   "irreversible-action": "Cette action est irréversible.",
   "contact-user": "Contacter l'utilisateur",
