--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -123,13 +123,15 @@
     "forbidden-access": "Vous n'avez pas accès à cette page",
     "user-must-log-for-action": "Vous devez être connecté pour effectuer cette action",
     "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
+    "user-must-be-admin-for-action": "Vous ne disposez pas des droits nécessaires pour effectuer cette action",
     "game-not-found": "Ce jeu n'existe pas ou n'existe plus",
     "invoice-not-found": "La facture n'existe pas ou n'existe plus",
     "favorite-already-exists": "Ce jeu est déjà dans vos favoris",
     "cart-loading": "Erreur lors du chargement du panier",
     "payment-sheet-display": "Erreur lors de l'affichage du formulaire de paiement",
     "payment-sheet-submit": "Erreur lors de la confirmation du paiement",
-    "cancel-reservation": "Erreur lors de l'annulation de la réservation"
+    "cancel-reservation": "Erreur lors de l'annulation de la réservation",
+    "game-creation-failed": "Erreur lors de la création du jeu"
   },
   "select-date-range-label": "Durée de la réservation (une semaine minimum)",
   "booking-period-label-1": "Réservation du ",
@@ -155,21 +157,21 @@
   "game-administration-title": "Administration des jeux",
   "delete-game-label": "Supprimer le jeu",
   "delete-game-confirmation": "Êtes-vous sûr de vouloir supprimer ce jeu {game} ?",
-  "game-name-field": "Nom du jeu",
+  "game-name-field": "Nom du jeu *",
   "game-name-placeholder": "Saisissez le nom du jeu",
   "game-description-field": "Description du jeu",
   "game-description-placeholder": "Saisissez la description du jeu",
-  "game-weekly-amount-field": "Prix à la semaine",
-  "game-weekly-amount-placeholder": "Saisissez le prix à la semaine",
-  "game-category-field": "Type de jeu",
-  "game-category-placeholder": "Sélectionnez le type de jeu",
-  "min-age-field": "Age minimum",
+  "weekly-amount-field": "Prix à la semaine *",
+  "weekly-amount-placeholder": "Saisissez le prix à la semaine",
+  "game-category-field": "Type de jeu ",
+  "game-category-placeholder": "Sélectionnez le type de jeu ",
+  "min-age-field": "Age minimum *",
   "min-age-placeholder": "Saisissez l'âge minimum",
-  "average-duration-field": "Durée moyenne d'une partie en min",
+  "average-duration-field": "Durée moyenne d'une partie en min *",
   "average-duration-placeholder": "45",
-  "min-players-field": "Nombre de joueurs minimum",
+  "min-players-field": "Nombre de joueurs minimum *",
   "min-players-placeholder": "Saisissez le nombre de joueurs minimum",
-  "max-players-field": "Nombre de joueurs maximum",
+  "max-players-field": "Nombre de joueurs maximum *",
   "max-players-placeholder": "Saisissez le nombre de joueurs maximum"
 
 }
