--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -77,6 +77,7 @@
   "invoices": "Factures",
   "see-invoices": "Voir les factures",
   "download-invoice": "Télécharger la facture",
+  "download-invoice-success": "La facture a été téléchargée",
   "invoice-number": "Facture #{number}",
   "invoice-amount": "Montant facturé :",
   "total-amount": "Montant total :",
@@ -112,6 +113,7 @@
     "user-must-log-for-action": "Vous devez être connecté pour effectuer cette action",
     "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
     "game-not-found": "Ce jeu n'existe pas ou n'existe plus",
+    "invoice-not-found": "La facture n'existe pas ou n'existe plus",
     "favorite-already-exists": "Ce jeu est déjà dans vos favoris",
     "cart-loading": "Erreur lors du chargement du panier",
     "payment-sheet-display": "Erreur lors de l'affichage du formulaire de paiement",
