--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -93,7 +93,10 @@
   "edited-at-label": "Modifié le {date}",
   "home-title": "Accueil",
   "messages-title": "Mes Messages",
+  "message": "Message",
   "new-message": "Nouveau message",
+  "message-sent": "Message envoyé",
+  "cant-send-message-to-yourself": "Vous ne pouvez pas envoyer de message à vous-même.",
   "search-title": "Rechercher",
   "account-title": "Mon Compte",
   "favorites-title": "Mes Favoris",
