[TOUJOURS DEGUEU MAIS FIX LAST MESSAGE]

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -82,9 +82,9 @@
   "invoice-amount": "Montant facturé :",
   "total-amount": "Montant total :",
   "reduction": "Réduction : ",
-  "validate-game-returned": "Valider le retour des jeux",
+  "validate-games-returned": "Valider le retour des jeux",
   "games-returned-successfully": "Les jeux ont été retournés avec succès.",
-  "validate-game-returned-confirm": "Etes-vous sûr de vouloir valider le retour des jeux ?",
+  "validate-games-returned-confirm": "Etes-vous sûr de vouloir valider le retour des jeux ?",
   "irreversible-action": "Cette action est irréversible.",
   "contact-user": "Contacter l'utilisateur",
   "details": "Détails",
