--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -96,6 +96,7 @@
   "message": "Message",
   "new-message": "Nouveau message",
   "message-sent": "Message envoyé",
+  "type-message": "Tapez votre message ici...",
   "cant-send-message-to-yourself": "Vous ne pouvez pas envoyer de message à vous-même.",
   "search-title": "Rechercher",
   "account-title": "Mon Compte",
