--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -93,7 +93,7 @@
   "send-label": "Envoyer",
   "edited-at-label": "Modifié le {date}",
   "home-title": "Accueil",
-  "messages-title": "Mes Messages",
+  "messages-title": "Mes messages",
   "message": "Message",
   "new-message": "Nouveau message",
   "message-sent": "Message envoyé",
@@ -103,15 +103,16 @@
   "type-message": "Tapez votre message ici...",
   "cant-send-message-to-yourself": "Vous ne pouvez pas envoyer de message à vous-même.",
   "search-title": "Rechercher",
-  "account-title": "Mon Compte",
-  "favorites-title": "Mes Favoris",
+  "account-title": "Mon compte",
+  "favorites-title": "Mes favoris",
+  "my-reservations-title": "Mes réservations",
   "add-game-title": "Ajouter un jeu",
   "add-game-btn": "Créer",
   "update-game-title": "Editer {name}",
   "update-game-btn": "Editer",
   "reservation-title": "Réservations",
   "administration-title": "Administration",
-  "cart-title": "Mon Panier",
+  "cart-title": "Mon panier",
   "no-conversation": "Vous n'avez aucune conversation.",
   "how-contact-user": "Pour contacter un utilisateur, veuillez passer par sa réservation",
   "reservation-details-title": "Réservations #{number} - Par {firstname} {lastname}",
