[FIX RESERVATIONS USER]

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -27,8 +27,8 @@
   "remove-from-cart-success-label": "Retiré du panier",
   "try-again-label": "Réessayer",
   "no-favorites-found": "Aucun favoris trouvé.",
-  "no-reservation-found": "Aucune réservation trouvées.",
-  "no-messages-found": "Aucun messages trouvés.",
+  "no-reservation-found": "Aucune réservation trouvée.",
+  "no-messages-found": "Aucuns messages trouvés.",
   "no-game-found": "Aucun jeu trouvé.",
   "form": {
     "field-required-msg": "Ce champ est requis.",
