--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -107,12 +107,14 @@
   "account-title": "Mon compte",
   "favorites-title": "Mes favoris",
   "my-reservations-title": "Mes réservations",
+  "update-password-title": "Modifier mon mot de passe",
+  "password-updated": "Mot de passe modifié",
   "add-game-title": "Ajouter un jeu",
   "add-game-btn": "Créer",
   "update-game-title": "Editer {name}",
   "update-user-title": "Modification des informations de {firstname} {lastname}",
   "update-game-btn": "Editer",
-  "update-user-btn": "Modifier",
+  "update-label": "Modifier",
   "reservation-title": "Réservations",
   "administration-title": "Administration",
   "cart-title": "Mon panier",
