--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -143,7 +143,8 @@
     "cancel-reservation": "Erreur lors de l'annulation de la réservation",
     "game-creation-failed": "Erreur lors de la création du jeu",
     "game-edition-failed": "Erreur lors de la modification du jeu",
-    "user-edition-failed": "Erreur lors de la modification de l'utilisateur"
+    "user-edition-failed": "Erreur lors de la modification de l'utilisateur",
+    "firebase-update-password-error": "Cette opération est sensible et requiert une authentification récente. Connectez-vous à nouveau puis modifiez votre mot de passe."
   },
   "select-date-range-label": "Durée de la réservation (une semaine minimum)",
   "booking-period-label-1": "Réservation du ",
