--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -174,6 +174,7 @@
   "game-description-field": "Description du jeu",
   "weekly-amount-field": "Prix à la semaine *",
   "pseudo-field": "Pseudo",
+  "pseudo-to-set-field": "Pseudo à renseigner",
   "personal-informations-title": "Informations personnelles",
   "notifications-parameters-title": "Paramètres des notifications",
   "activate-mail-notifications-label": "Notifications par mail activées : ",
