--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -123,6 +123,8 @@
   "reservation-details-title": "Réservations #{number} - Par {firstname} {lastname}",
   "errors": {
     "error-detail": "Erreur : {error}",
+    "reservation-creation-not-found": "Impossible de créer la réservation: Jeux ou réduction introuvable",
+    "reservation-creation-failed": "Impossible de créer la réservation",
     "error-loading-user-data": "Erreur lors du chargement des données de l'utilisateur",
     "unknown": "Erreur inconnue",
     "service-unavailable": "Service indisponible. Veuillez réessayer ultérieurement",
@@ -143,13 +145,15 @@
     "cancel-reservation": "Erreur lors de l'annulation de la réservation",
     "game-creation-failed": "Erreur lors de la création du jeu",
     "game-edition-failed": "Erreur lors de la modification du jeu",
+    "game-deletion-failed": "Erreur lors de la suppression du jeu",
     "user-edition-failed": "Erreur lors de la modification de l'utilisateur",
-    "firebase-update-password-error": "Cette opération est sensible et requiert une authentification récente. Connectez-vous à nouveau puis modifiez votre mot de passe."
+    "firebase-update-password-error": "Cette opération est sensible et requiert une authentification récente. Connectez-vous à nouveau puis modifiez votre mot de passe.",
+    "payment-threshold-exceeded": "Notre application ne gère pas les paiments de cette importance. Merci de contacter le magasin pour effectuer votre réservation."
   },
   "select-date-range-label": "Durée de la réservation (une semaine minimum)",
   "booking-period-label-1": "Réservation du ",
   "booking-period-label-2": " au ",
-  "booking-duration-label": "Durée de la réservation",
+  "booking-duration-label": "Durée de la réservation ",
   "booking-nb-weeks-label": {
     "one": "1 semaine *",
     "other": "{nbWeeks} semaines *"
@@ -168,8 +172,9 @@
   "not-available-on-web-label": "Fonctionnalité non disponible sur le web",
   "email-copied": "L'email de l'utilisateur {email} a été copié dans le presse-papier.",
   "game-administration-title": "Administration des jeux",
+  "delete-label": "Supprimer",
   "delete-game-label": "Supprimer le jeu",
-  "delete-game-confirmation": "Êtes-vous sûr de vouloir supprimer ce jeu {game} ?",
+  "delete-game-confirmation": "Êtes-vous sûr de vouloir supprimer le jeu {game} ?",
   "game-name-field": "Nom du jeu *",
   "game-description-field": "Description du jeu",
   "weekly-amount-field": "Prix à la semaine *",
