--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -124,6 +124,7 @@
   "errors": {
     "error-detail": "Erreur : {error}",
     "error-loading-user-data": "Erreur lors du chargement des données de l'utilisateur",
+    "error-loading-conversation-data": "Erreur lors du chargement des données de la conversation",
     "unknown": "Erreur inconnue",
     "service-unavailable": "Service indisponible. Veuillez réessayer ultérieurement",
     "authentication-failed": "Erreur d'authentification, votre email ou votre mot de passe sont invalides",
