--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -168,7 +168,7 @@
   "payment-success-subtitle": "Il ne vous reste plus qu'à venir chercher votre jeu !",
   "payment-validate-button": "Valider la commande",
   "game-unavailable-label": "Indisponible",
-  "pick-booking-date-label": "Choisissez une date de réservation",
+  "pick-booking-date-label": "Choisissez une durée de réservation",
   "applied-reduction-label": "Réduction appliquée",
   "validate-label": "Valider",
   "cancel-label": "Annuler",
