--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -111,8 +111,13 @@
   "update-password-title": "Modifier mon mot de passe",
   "password-updated": "Mot de passe modifié",
   "add-game-title": "Ajouter un jeu",
+  "add-unavailability-label": "Ajouter une indisponibilité",
+  "delete-unavailability-label": "Supprimer une indisponibilité",
+  "action-delete-unavailability": "Cliquez sur une indisponibilité pour la supprimer",
+  "confirm-delete-unavailability": "Voulez-vous supprimer cette indisponibilité ?",
   "add-game-btn": "Créer",
   "update-game-title": "Editer {name}",
+  "game-unavailabilities-title": "Indisponibilités de {name}",
   "update-user-title": "Modification des informations de {firstname} {lastname}",
   "update-game-btn": "Editer",
   "update-label": "Modifier",
