--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -155,6 +155,8 @@
     "payment-sheet-submit": "Erreur lors de la confirmation du paiement",
     "cancel-reservation": "Erreur lors de l'annulation de la réservation",
     "game-creation-failed": "Erreur lors de la création du jeu",
+    "plan-creation-failed": "Erreur lors de la création de la réduction",
+    "plan-update-failed": "Erreur lors de la modification de la réduction",
     "game-edition-failed": "Erreur lors de la modification du jeu",
     "game-deletion-failed": "Erreur lors de la suppression du jeu",
     "user-edition-failed": "Erreur lors de la modification de l'utilisateur",
@@ -172,6 +174,7 @@
   },
   "active": "ACTIVE",
   "inactive": "INACTIVE",
+  "add-plan-button": "Ajouter une réduction",
   "booking-nb-weeks-information": "* Toute semaine entamée est dûe.",
   "booking-total-amount-label": "Montant total de la réservation",
   "cart-empty-label": "Votre panier est vide",
