--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -117,7 +117,7 @@
   "action-delete-unavailability": "Cliquez sur une indisponibilité pour la supprimer",
   "confirm-delete-unavailability": "Voulez-vous supprimer cette indisponibilité ?",
   "unavailability-created": "L'indisponibilité a été créée avec succès.",
-  "add-game-btn": "Créer",
+  "add-label": "Créer",
   "update-game-title": "Editer {name}",
   "game-unavailabilities-title": "Indisponibilités de {name}",
   "update-user-title": "Modification des informations de {firstname} {lastname}",
@@ -160,6 +160,7 @@
     "game-edition-failed": "Erreur lors de la modification du jeu",
     "game-deletion-failed": "Erreur lors de la suppression du jeu",
     "user-edition-failed": "Erreur lors de la modification de l'utilisateur",
+    "percentage-error": "Le pourcentage doit être compris entre 1 et 100",
     "firebase-update-password-error": "Cette opération est sensible et requiert une authentification récente. Connectez-vous à nouveau puis modifiez votre mot de passe.",
     "payment-threshold-exceeded": "Notre application ne gère pas les paiments de cette importance. Merci de contacter le magasin pour effectuer votre réservation.",
     "upload-picture-error": "Erreur lors de l'envoi de l'image"
@@ -174,7 +175,8 @@
   },
   "active": "ACTIVE",
   "inactive": "INACTIVE",
-  "add-plan-button": "Ajouter une réduction",
+  "add-plan-label": "Ajouter une réduction",
+  "update-plan-label": "Modifier une réduction",
   "booking-nb-weeks-information": "* Toute semaine entamée est dûe.",
   "booking-total-amount-label": "Montant total de la réservation",
   "cart-empty-label": "Votre panier est vide",
@@ -184,6 +186,7 @@
   "game-unavailable-label": "Indisponible",
   "pick-booking-date-label": "Choisissez une durée de réservation",
   "applied-reduction-label": "Réduction appliquée",
+  "active-reduction-label": "Réduction active",
   "validate-label": "Valider",
   "cancel-label": "Annuler",
   "not-available-on-web-label": "Fonctionnalité non disponible sur le web",
@@ -204,12 +207,18 @@
   "notifications-parameters-title": "Paramètres des notifications",
   "activate-mail-notifications-label": "Notifications par mail activées : ",
   "activate-app-notifications-label": "Notifications internes à l'application activées : ",
+  "plan-name-field": "Nom de la réduction *",
+  "reduction-field": "Pourcentage de la réduction *",
+  "nb-weeks-field": "Nombre de semaines nécessaires pour la réduction *",
+  "plan-created-successfully": "La réduction a été créée avec succes.",
+  "plan-updated-successfully": "La réduction a été modifiée avec succes.",
   "game-category-field": "Type de jeu ",
   "min-age-field": "Age minimum *",
   "average-duration-field": "Durée moyenne d'une partie en min *",
   "min-players-field": "Nombre de joueurs minimum *",
   "max-players-field": "Nombre de joueurs maximum *",
   "currency-symbol": "€",
+  "percent-symbol": "%",
   "reservation-details-info": "* Il se peut que certains jeux n'apparaissent plus dans le détails suite à leur suppression. Seule la facture consèrve l'intégralité de la commande dans le temps.",
   "list-plans-title": "Liste des réductions",
   "list-categories-title": "Liste des catégories",
