--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -156,6 +156,8 @@
     "cancel-reservation": "Erreur lors de l'annulation de la réservation",
     "game-creation-failed": "Erreur lors de la création du jeu",
     "plan-creation-failed": "Erreur lors de la création de la réduction",
+    "plan-creation-conflict": "Une des information est déjà existante parmi le nom, le pourcentage ou la durée",
+    "plan-update-conflict": "Le nom de la réduction est déjà utilisé",
     "plan-update-failed": "Erreur lors de la modification de la réduction",
     "game-edition-failed": "Erreur lors de la modification du jeu",
     "game-deletion-failed": "Erreur lors de la suppression du jeu",
