--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -76,6 +76,7 @@
     "yes": "Oui",
     "no": "Non"
   },
+  "availables": "Disponibles",
   "invoices": "Factures",
   "see-invoices": "Voir les factures",
   "download-invoice": "Télécharger la facture",
@@ -147,7 +148,7 @@
     "user-must-log-for-access": "Vous devez être connecté pour accéder à cette page",
     "user-must-be-admin-for-action": "Vous ne disposez pas des droits nécessaires pour effectuer cette action",
     "game-not-found": "Ce jeu n'existe pas ou n'existe plus",
-    "game-or-unavailability-not-found": "L'indispobilité ou le jeu n'existe pas ou n'existe plus",
+    "game-or-unavailability-not-found": "L'indisponilité ou le jeu n'existe pas ou n'existe plus",
     "unavailability-conflict": "Ce jeu est déjà loué ou indisponible à cette date",
     "invoice-not-found": "La facture n'existe pas ou n'existe plus",
     "favorite-already-exists": "Ce jeu est déjà dans vos favoris",
